--- a/eProject/Areas/Admin/Views/Equipment/Index.cshtml
+++ b/eProject/Areas/Admin/Views/Equipment/Index.cshtml
@@ -36,7 +36,7 @@
 </nav>
 <div class="dataBox">
     <h3 class="dataBox-heading">
-        List of Equipments
+        List of equipments
     </h3>
 
     <div class="equipment">
