--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -23,22 +23,23 @@
             <a class="sidebar-menuItem" href="/Admin/CallChargeType">
                 Call charge type management
             </a>
+            <a class="sidebar-menuItem" href="/Admin/Equipment">
+                Equipment management
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Warehouse">
+                Warehouse management
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/WarehouseEquipment">
+                Warehouse equipment management
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Contact">
+                Contact management
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Supplier">
+                Supplier management
+            </a>
         }
-        <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
-            Retail Show Room management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Equipment">
-            Equipment management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Warehouse">
-            Warehouse management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Contact">
-            Contact management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Supplier">
-           Supplier management
-        </a>
+
 
     </nav>
 </div>
