--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -9,35 +9,45 @@
         @if (AuthManager.CurrentEmployee.IsAdmin)
         {
             <a class="sidebar-menuItem" href="/Admin/Service">
-                Service management
+                <i class="fa-solid fa-lines-leaning"></i>
+                Service
             </a>
             <a class="sidebar-menuItem" href="/Admin/Employee">
-                Employee management
-            </a>
-            <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
-                Retail Show Room management
+                <i class="fa-solid fa-lines-leaning"></i>
+                Employee
             </a>
             <a class="sidebar-menuItem" href="/Admin/PaymentPlan">
-                Payment plan management
+                <i class="fa-solid fa-lines-leaning"></i>
+                Payment plan
             </a>
             <a class="sidebar-menuItem" href="/Admin/CallChargeType">
-                Call charge type management
+                <i class="fa-solid fa-lines-leaning"></i>
+                Call charge type
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Retail Show Room
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Equipment">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Equipment
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Warehouse">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Warehouse
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Supplier">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Supplier
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/City">
+                <i class="fa-solid fa-lines-leaning"></i>
+                City
             </a>
         }
-        <a class="sidebar-menuItem" href="/Admin/RetailShowRoom">
-            Retail Show Room management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Equipment">
-            Equipment management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Warehouse">
-            Warehouse management
-        </a>
         <a class="sidebar-menuItem" href="/Admin/Contact">
-            Contact management
-        </a>
-        <a class="sidebar-menuItem" href="/Admin/Supplier">
-           Supplier management
+            <i class="fa-solid fa-lines-leaning"></i>
+            Contact
         </a>
 
     </nav>
