--- a/eProject/Content/Css/Order/Prepare.css
+++ b/eProject/Content/Css/Order/Prepare.css
@@ -87,3 +87,31 @@
     transform: translateX(-100%);
     margin-top: 16px;
 }
+
+.invalidMessage {
+    font-size: 1.6rem;
+    color: red;
+    animation: ringring ease-out .3s;
+}
+
+@keyframes ringring {
+    0% {
+        margin-left: 0;
+    }
+
+    25% {
+        margin-left: 10px;
+    }
+
+    50% {
+        margin-left: -10px;
+    }
+
+    75% {
+        margin-left: 10px;
+    }
+
+    100% {
+        margin-left: -10px;
+    }
+}
