connect quantity discount

--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -38,6 +38,9 @@
             <a class="sidebar-menuItem" href="/Admin/Supplier">
                 Supplier management
             </a>
+            <a class="sidebar-menuItem" href="/Admin/ConnectQuantityDiscount">
+                Connect quantity discount management
+            </a>
         }
 
 
