--- a/eProject/Areas/Admin/Views/Equipment/Edit.cshtml
+++ b/eProject/Areas/Admin/Views/Equipment/Edit.cshtml
@@ -2,6 +2,7 @@
 
 @section Styles{
     <link rel="stylesheet" href="~/Content/Css/AdminCss/Equipment/Edit.css" />
+    <link rel="stylesheet" href="~/Content/topNav.css"/>
 }
 @{
     ViewBag.Title = "Update equipment";
