--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -45,12 +45,14 @@
                 City
             </a>
             <a class="sidebar-menuItem" href="/Admin/ConnectQuantityDiscount">
-                Connect quantity discount management
+                <i class="fa-solid fa-lines-leaning"></i>
+                Connect quantity discount
+            </a>
+            <a class="sidebar-menuItem" href="/Admin/Contact">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Contact
             </a>
         }
-        <a class="sidebar-menuItem" href="/Admin/Contact">
-            <i class="fa-solid fa-lines-leaning"></i>
-            Contact
-        </a>
+        
     </nav>
 </div>
