--- a/eProject/Content/Css/AdminCss/RetailShowRoom/EditRetailShowRoom.css
+++ b/eProject/Content/Css/AdminCss/RetailShowRoom/EditRetailShowRoom.css
@@ -110,7 +110,7 @@
 .topNav-btnItem {
     display: inline-block;
     color: #333;
-    background-color: var(--bgcl-btn);
+    background-color: #00ffff;
     font-size: 1.6rem;
     padding: 12px 16px;
     border-radius: 6px;
