Complete customer order service

--- a/eProject/Content/App.css
+++ b/eProject/Content/App.css
@@ -5,6 +5,8 @@
     --dark-bg-content: #292929;
     --white: #fff;
     --grey: #ccc;
+    --text: #333;
+    --black: #000;
 
     --header-height: 80px;
 }
