fix something in connect quantity discount

--- a/eProject/Areas/Admin/Views/ConnectQuantityDiscount/Index.cshtml
+++ b/eProject/Areas/Admin/Views/ConnectQuantityDiscount/Index.cshtml
@@ -60,7 +60,7 @@
                 <div class="row">
                     <div class="col-xl-3">
                         <p class="connectquantitydiscountItem-serviceName">
-                            @connectQuantity.DiscountValue
+                            @(connectQuantity.DiscountValue * 100) %
                         </p>
                     </div>
                     <div class="col-xl-3">
