--- a/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
+++ b/eProject/Areas/Admin/Views/Shared/Partials/Sidebar.cshtml
@@ -52,7 +52,11 @@
                 <i class="fa-solid fa-lines-leaning"></i>
                 Contact
             </a>
+            <a class="sidebar-menuItem" href="/Admin/CustomerFeedback">
+                <i class="fa-solid fa-lines-leaning"></i>
+                Customer feedback
+            </a>
         }
-        
+
     </nav>
 </div>
