--- a/eProject/Views/Site/Faq.cshtml
+++ b/eProject/Views/Site/Faq.cshtml
@@ -18,6 +18,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     You can do this to return phone messages in the following ways:
                     Leave a message after the beep in case subscriber A cannot call subscriber B B turns off the phone, the phone is busy or does not track the phone
                     Or call 0121685741 for more details.
@@ -34,6 +35,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     Currently on Nexus we have 3 connection services: Dial – Up Connection, Broad Band Connection, LandLine Connection
                     if 10-15 connections are taken, they will be getting a discount of 25% in the advance and as well in the security deposit. If it is between 15-25 connections, then they will avail 50% discount and for 25-50 then they can avail 75% discount and if it is above 50 they will avail 100% discount
                 </div>
@@ -47,6 +49,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     The service tax is as per the government (12.24%) on the whole bill generated and will be charged to the customer.
                 </div>
             </details>
@@ -59,6 +62,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     In telecommunications, broadband is the wide-bandwidth data transmission that transports multiple signals at a wide range of frequencies and Internet traffic types, which enables messages to be sent simultaneously and is used in fast internet connections.
                 </div>
             </details>
@@ -71,6 +75,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     In telecommunications, broadband is the wide-bandwidth data transmission that transports multiple signals at a wide range of frequencies and Internet traffic types, which enables messages to be sent simultaneously and is used in fast internet connections.
                 </div>
             </details>
@@ -83,6 +88,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     Please check if you have been provided with a login account by Nexus or if you entered the wrong Phone Number and Password.<br />
                     If you already have an account but cannot log in, please contact 0121685741 for support.
                 </div>
@@ -96,6 +102,7 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     Yes, if you don't want to register for the online service yourself, you can go to any Nexus point of sale to register for the service.
                 </div>
             </details>
@@ -107,9 +114,10 @@
                     What service packages does Nexus currently offer?
                 </summary>
                 <br />
-   
+
                 <div class="content-body">
-                 There are three main types of connections: <br />
+                    <i class="fa-solid fa-arrow-right"></i>
+                    There are three main types of connections: <br />
                     (A) Dial – Up Connection : 325$ <br />
                     (B) Broad Band Connection : 500$ <br />
                     (C) LandLine Connection : 250$ <br />
@@ -125,21 +133,73 @@
                 </summary>
                 <br />
                 <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
                     For customers who have registered for Dial - Up connection, the feasibility test will be conducted for both landline phone and internet connection in case the customer registers both phone and internet connection and if customer is holding landline from same carrier and currently applies for internet connection then feasibility test is conducted for internet connection only. Feasibility testing will be conducted to test the distance as they consider the distance parameters to provide the connection, check the server availability, etc. according to the company's template.
                 </div>
             </details>
         </div>
 
         <div class="col">
-
+            <details>
+                <summary>
+                    How do I get information about Nexus product packages?
+                </summary>
+                <br />
+                <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    You go to the website and select Services , will display the package packages that Nexus is providing, you choose to view Landline/broadband/DialUp and click on each package to view detailed information (introduction, price) charges, ..) of that package.
+                </div>
+            </details>
         </div>
 
         <div class="col">
-
+            <details>
+                <summary>
+                    How to check the service pack information being used?
+                </summary>
+                <br />
+                <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    Method 1: You need to log in to Nexus website, select the profile section, it will display the packages you are registering and the package usage class..<br />
+                    Method 2: You can contact Nexus directly and the staff will look it up for you.<br />
+                    Note: If you do not have an account to log in, you need to create an account first by following the steps on the website with instructions.
+                </div>
+            </details>
         </div>
         <div class="col">
-
+            <details>
+                <summary>
+                    What is the equipment purchase/warranty procedure?
+                </summary>
+                <br />
+                <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    Please contact SDT call center or send contact via Nexus web.
+                </div>
+            </details>
         </div>
+        <div class="col">
+            <details>
+                <summary>
+                    What if I sign the contract and pay but can't install it?
+                </summary>
+                <br />
+                <div class="content-body">
+                    <i class="fa-solid fa-arrow-right"></i>
+                    Nexus network installation time is from 1 to 2 days, if it is not possible to install, technical or sales staff will notify customers immediately of the status, not to make multiple appointments lasting many days. Customers will get back 100% of the amount paid to the company.
+                </div>
+            </details>
+        </div>
+        @*<div class="col">
+            <details>
+                <summary>
+
+                </summary>
+                <br />
+                <div class="content-body">
+
+                </div>
+            </details>
+        </div>*@
     </div>
-    
 </div>
