--- a/eProject/Content/Css/AdminCss/Feedback/Index.css
+++ b/eProject/Content/Css/AdminCss/Feedback/Index.css
@@ -2,31 +2,45 @@
     padding: 12px;
 }
 .topNav {
-    padding: 12px 0;
+    padding: 12px 0 12px 12px;
     border-bottom: 1px solid #555;
 }
 
-.topNav-btnItem {
+.topNav-btnItem, .searchForm-btn {
     display: inline-block;
     color: #333;
-    background-color: var(--bgcl-btn);
+    background-color: aqua;
     font-size: 1.6rem;
     padding: 12px 16px;
     border-radius: 6px;
     text-decoration: none;
 }
 
-.topNav-btnItem i {
-     color: #333;
+.topNav-btnItem i, .searchForm-btn i {
+    color: #333;
 }
 
 .topNav-btnItem:not(:first-child) {
      margin-left: 12px;
 }
 
-.topNav-btnItem:hover {
-     color: #333;
-     opacity: .8;
+.topNav-btnItem:hover, .searchForm-btn:hover {
+    color: #333;
+    opacity: .8;
+}
+
+.topNav-search {
+    display: inline-block;
+}
+
+.searchForm-input {
+    font-size: 1.6rem;
+    font-weight: 400;
+    padding: 12px;
+    border-radius: 6px;
+    width: 400px;
+    outline: none;
+    color: #333;
 }
 
 .page-title{
@@ -48,9 +62,8 @@
     padding: 12px;
 }
 
-feedbackItem {
-    box-shadow: 0 0 10px #55555588;
-    border-radius: 4px;
+.feedbackItem {
+    margin-bottom: 20px;
 }
 
 feedbackItem:not(:first-child) {
